src/objects/Project__c.object
<CustomObject>
    <fields>
        <fullName>Date_approved_by_TransCo__c</fullName>
        <label>Date approved by TransCo</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description_of_the_project__c</fullName>
        <label>Description of the project</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Estimated_completion_date__c</fullName>
        <label>Estimated completion date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Sponsor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project sponsor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Projects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_name__c</fullName>
        <label>Project name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Initiation</fullName>
                </value>
                <value>
                    <fullName>Definition</fullName>
                </value>
                <value>
                    <fullName>Build</fullName>
                </value>
                <value>
                    <fullName>Testing</fullName>
                </value>
                <value>
                    <fullName>Implementation</fullName>
                </value>
                <value>
                    <fullName>Post implementation review</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Project_name__c</columns>
        <columns>Project_Manager__c</columns>
        <columns>Project_Sponsor__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Change_Delivery_Projects_2016</fullName>
        <columns>NAME</columns>
        <columns>Project_name__c</columns>
        <columns>Project_Manager__c</columns>
        <columns>Project_Sponsor__c</columns>
        <columns>Status__c</columns>
        <columns>Date_approved_by_TransCo__c</columns>
        <columns>Estimated_completion_date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notContain</operation>
            <value>Closed</value>
        </filters>
        <label>Change Delivery Projects 2016</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Current_Change_Delivery_Projects</fullName>
        <columns>NAME</columns>
        <columns>Project_name__c</columns>
        <columns>Status__c</columns>
        <columns>Project_Manager__c</columns>
        <columns>Project_Sponsor__c</columns>
        <columns>Estimated_completion_date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>Current Change Delivery Projects</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Current_Change_Delivery_Projects_2015</fullName>
        <columns>NAME</columns>
        <columns>Project_Manager__c</columns>
        <columns>Project_name__c</columns>
        <columns>Project_Sponsor__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>Current Change Delivery Projects 2015</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>P{0000}</displayFormat>
        <label>Project Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>